made first DB migration

--- a/JN_JD_Website/staticfiles/styles.css
+++ b/JN_JD_Website/staticfiles/styles.css
@@ -176,10 +176,12 @@ footer {
 	color: #ccc; /* Light gray text for copyright */
 }
 
+.page-name {
+	margin: 0 0 2vh 0;
+}
+
 .send-content {
 	width:100%;
-	height:100%;
-	background-color:lightcyan;
 }
 
 .content {
@@ -239,7 +241,7 @@ footer {
 
 .signin-form input {
     display: block;
-    width: 30vw;
+    width: 25vw;
     margin-bottom: 10px; /* Add spacing between inputs */
 }
 
@@ -249,6 +251,10 @@ footer {
     align-items: center; /* Optional: Set a max width */
 }
 
+.signin-form > * {
+	margin: 2vh 0;
+}
+
 .signin-form button {
     width: 100%;
     padding: 10px;
@@ -256,6 +262,14 @@ footer {
     color: white;
     border: none;
     cursor: pointer;
+}
+
+.form-border {
+	border-width: 0.5rem;
+	border-radius: 2rem;
+	border-color: #6FB9A9;
+	border-style: solid;
+	padding: 3vw 5vw;
 }
 .remember-me-group {
     display: flex;
@@ -275,6 +289,158 @@ footer {
     cursor: pointer; /* Helps with usability */
 }
 
+.group-container-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
+    justify-content: flex-start; /* Ensures content starts from the left */
+    overflow-x: auto; /* Allows scrolling */
+    overflow-y: hidden;
+    border-color: #016c78;
+	border-radius: 25px;
+	border-width: 0.25rem;
+	border-style: solid;
+    width: 70vw;
+    height: 70%;
+    white-space: nowrap; /* Prevents wrapping */
+    padding: 0 1rem; /* Optional: Adds some spacing */
+}
+
+.group-container {
+    min-width: 19vw; /* Ensures minimum width for responsiveness */
+    height: 75vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: auto; /* Enables scrolling inside if needed */
+    margin: 1rem 1rem 1rem 1rem; /* Adds spacing between items */
+}
+
+.group-users {
+	width: 100%;
+	height: 100%;
+	margin: 1rem 0 0 0;
+	border-width: 0.25rem;
+	border-style: solid;
+	border-color: #0097a7;
+	border-radius: 25px;
+	overflow: auto; /* Enables scrolling inside if needed */
+	padding:1rem 1rem;
+
+}
+
+.movable-user {
+    cursor: grab;
+    background-color: #00bcd4;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 5px;
+    color: white;
+    transition: transform 0.125s ease-in-out;
+}
+
+.movable-user:active {
+    transform: scale(1.05);
+}
+
+.hidden {
+    opacity: 0.5;
+}
+
+.user-group-container-wrapper {
+    width: 70vw;
+	height: 30vh;
+    overflow: auto;
+    border-style: solid;
+    border-width: 0.25rem;
+    border-color: #016c78;
+    border-radius: 25px;
+    margin: 0 0 2vh 0;
+    
+    display: flex;
+    flex-wrap: wrap; /* Enables wrapping */
+    gap: 1rem; /* Adds space between elements */
+    align-items: center; /* Aligns items properly */
+    justify-content: space-evenly; /* Ensures they align to the left */
+    padding: 1rem; /* Adds some spacing */
+}
+
+.movable-group-container {
+    display: flex;
+    gap: 2rem;
+}
+
+.movable-group-container-wrapper {
+    padding: 15px;
+    border-radius: 10px;
+    width: 25vw;
+    text-align: center;
+}
+
+.movable-groups {
+    height: 70vh;
+    border: 0.25rem solid #0097a7;
+    padding: 1vw;
+    border-radius: 25px;
+    margin: 1rem 0;
+    overflow: auto;
+}
+
+.movable-group {
+    background: #00bcd4;
+    color: white;
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 5px;
+    cursor: grab;
+    text-align: center;
+}
+
+.movable-group.hidden {
+    display: none;
+}
+
+.event-details-container {
+    width: 50vw;
+    height:30vh;
+    border: 0.25rem solid #999999;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    padding: 0 0 0 2rem;
+}
+
+.event-date-block {
+    width:10rem;
+    height: 10rem;
+    background-color: #616161;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size:4rem;
+    border-radius: 25px;
+    font-family: "Roboto-Thin";
+}
+
+.event-date-text {
+    font-size:2.5rem;
+    color: white;
+    font-family: "Roboto";
+}
+
+
+.event-details-block {
+    width: 50vw;
+    height:30vh;
+    border: 0.25rem solid #999999;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    padding: 0 0 0 2rem;
+    margin-bottom: 2rem; /* Adds spacing between event details blocks */
+}
 
 @media (max-width: 1200px) {
     .ad-box {
@@ -308,10 +474,9 @@ footer {
         display: block; /* Show on mobile devices */
     }
 
-	.signin-form .textbox {
+	.signin-form > .textbox {
 		display: block;
-		width: 70vw;
-		margin-bottom: 10px;
+		width: 60vw;
 	}
 	
 }
