--- a/JN_JD_Website/website_app/templates/index.html
+++ b/JN_JD_Website/website_app/templates/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index Page</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" href="{% static 'styles.css' %}?v={{ timestamp }}">
+    <script src="{% static 'scripts.js' %}"></script>
+
     <!-- Link to Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <div id="navbar">
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Home 1</a></li>
-            <li><a href="#">Home 2</a></li>
+            <li><a href="{% url 'editgroups' %}">Edit Groups</a></li>
+            <li><a href="{% url 'editevent' %}">Edit Event</a></li>
+            <li><a href="{% url 'viewevents' %}">View Events</a></li>
             <li><a href="#">Home 3</a></li>
             <form action="{% url 'logout' %}" method="post">
                 {% csrf_token %}
@@ -33,8 +35,7 @@
             {% endblock %}
         <div class="ad-box">Right Ad</div>
     </div>
-    
-    
+
     <footer>
         <div class="footer-content">
             <div class="footer-links">
