--- a/JN_JD_Website/staticfiles/styles.css
+++ b/JN_JD_Website/staticfiles/styles.css
@@ -45,6 +45,9 @@ body {
   min-height: 100vh; /* Ensure body takes at least the full viewport height */
 }
 
+.logo-img {
+    width:100px;
+}
 
 #navbar {
 	display: flex;
@@ -57,28 +60,69 @@ body {
 }
 
 /* Ensure navigation links stay aligned */
+
 .nav-links {
 	display: flex;
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
 }
-
+/* Basic Styling */
 .nav-links li {
-	display: inline-block;
-	padding: 0 0.75vw;
+    display: inline-block;
+    padding: 0 0.75vw;
+    position: relative;
 }
 
 .nav-links li a {
-	text-decoration: none;
-	color: #ffffff;
-	display: block;
+    text-decoration: none;
+    color: #ffffff;
+    display: block;
     transition: color 0.3s ease;
 }
 
 .nav-links li a:hover {
-	color:#00bcd4;
+    color: #00bcd4;
 }
+
+/* Dropdown Menu */
+.dropdown {
+    position: relative;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #008080;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    min-width: 200px; /* Adjust width if needed */
+    border-radius: 0.5rem;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-menu li {
+    padding: 0.5rem 1rem;
+}
+
+.dropdown-menu li a {
+    color: #ffffff;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-menu li a:hover {
+    background-color: #00bcd4;
+}
+
+/* Show dropdown on hover */
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+
 
 /* Profile Picture Circle */
 #profile-picture {
