--- a/JN_JD_Website/website_app/templates/editgroups.html
+++ b/JN_JD_Website/website_app/templates/editgroups.html
@@ -3,32 +3,35 @@
 
 {% block content %}
 <div class="content">
-    <h1>Edit Groups</h1>
+    <h1>Edit Groups for {{ organization.name }}</h1>
+    
     <div class="user-group-container-wrapper">
-        <div class="movable-user" id="user1">Liam Johnson</div>
-        <div class="movable-user" id="user2">Emma Smith</div>
-        <div class="movable-user" id="user3">Noah Brown</div>
-        <div class="movable-user" id="user3">Olivia Davis</div>
-        <div class="movable-user" id="user4">William Wilson</div>
-        <div class="movable-user" id="user5">Sophia Martinez</div>
-        <div class="movable-user" id="user6">Jordan Keene</div>
-    </div>
-    <div class="group-container-wrapper">
-        <div class="group-container">
-            <!-- Make the group name editable -->
-            <h2 contenteditable="true" class="editable-group-name">Group 1</h2>
-            <div class="group-users">
-                <div class="movable-user" id="user10">James Taylor</div>
-                <div class="movable-user" id="user11">Isabella Anderson</div>
-                <div class="movable-user" id="user12">Benjamin Thomas</div>
-                <div class="movable-user" id="user13">Mia Hernandez</div>
-                <div class="movable-user" id="user14">Alexander Moore</div>
-                <div class="movable-user" id="user15">Charlotte Jackson</div>
-                <div class="movable-user" id="user16">Joshua Nelson</div>
-            </div>
-        </div>
-        
+        <div class="movable-user" id="user7">FIX THIS JOHN</div>
     </div>
     
+    <div class="group-container-wrapper">
+        <!-- Loop through each group associated with the organization -->
+        {% for group in groups %}
+        <div class="group-container">
+            <!-- Make the group name editable -->
+            <h2 contenteditable="true" class="editable-group-name">{{ group.name }}</h2>
+            
+            <div class="group-users">
+                <!-- Loop through the users in this group -->
+                {% for user in group.users.all %}
+                <div class="movable-user" id="user{{ user.id }}">{{ user.username }}</div>
+                {% endfor %}
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+    <!-- Only show the delete button if the logged-in user is the owner of the organization -->
+    {% if organization.owner == request.user %}
+    <form method="POST" action="{% url 'delete_organization' organization.id %}" onsubmit="return confirm('Are you sure you want to delete this organization?');">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-danger">Delete Organization</button>
+    </form>
+    {% endif %}
 </div>
 {% endblock %}
