--- a/JN_JD_Website/website_app/templates/index.html
+++ b/JN_JD_Website/website_app/templates/index.html
@@ -14,17 +14,37 @@
 <body>
     <div id="navbar">
         <ul class="nav-links">
-            <li><a href="{% url 'editgroups' %}">Edit Groups</a></li>
-            <li><a href="{% url 'editevent' %}">Edit Event</a></li>
-            <li><a href="{% url 'viewevents' %}">View Events</a></li>
-            <li><a href="#">Home 3</a></li>
-            <form action="{% url 'logout' %}" method="post">
-                {% csrf_token %}
-                <button type="submit">Logout</button>
-            </form>
+            <li class="dropdown">
+                <a href="#">Events</a>
+                <ul class="dropdown-menu">
+                    <li><a href="{% url 'viewevents' %}">View Events</a></li>
+                    <li><a href="{% url 'createevent' %}">Create Event</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#">Groups</a>
+                <ul class="dropdown-menu">
+                    <li><a href="{% url 'creategroup' %}">Create Group</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#">Organizations</a>
+                <ul class="dropdown-menu">
+                    <li><a href="{% url 'vieworgs' %}">View Organizations</a></li>
+                    <li><a href="{% url 'createorg' %}">Create Organization</a></li>
+                    <li><a href="{% url 'joinorg' %}">Join Organization</a></li>
+                </ul>
+            </li>
+            <li>
+                <form action="{% url 'logout' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit">Logout</button>
+                </form>
+            </li>
+            
         </ul>
         <!-- Profile Picture with Username Initial -->
-        <div id="profile-picture"><a href="#">J</a></div>
+        <div id="profile-picture"><a href="#">{{ request.user.f_name|slice:":1"|upper }}</a></div>
     </div>
     <div class="mobile-ad-container">
         <div class="mobile-ad-box">Mobile Ad</div>
