--- a/JN_JD_Website/website_app/templates/viewevents.html
+++ b/JN_JD_Website/website_app/templates/viewevents.html
@@ -9,7 +9,7 @@
             <div class="event-list-item">
                 <div class="event-list-date-block">
                     {{ event.date.day }} 
-                    <div class="event-date-text">{{ event.date|date:"b" }}</div>
+                    <div class="event-date-text">{{ event.date|date:"M" }}</div>
                 </div>
                 <div class="event-description-container">
                     <h3>{{ event.name }}</h3>
