--- a/JN_JD_Website/website_app/static/styles.css
+++ b/JN_JD_Website/website_app/static/styles.css
@@ -470,7 +470,7 @@ footer {
     border-radius: 25px;
     display: flex;
     align-items: center;
-    padding: 0 0 0 1.5rem;
+    padding: 1rem 1rem 1rem 1.5rem;
     margin:0.5rem;
 }
 
@@ -486,6 +486,10 @@ footer {
     font-size:2.5rem;
     border-radius: 15px;
     font-family: "Roboto-Thin";
+}
+
+.event-description-container {
+    padding: 5vw;
 }
 
 @media (max-width: 1200px) {
