--- a/JN_JD_Website/website_app/templates/index.html
+++ b/JN_JD_Website/website_app/templates/index.html
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Your Company. All rights reserved.</p>
+            <p>&copy; 2025 SoundCheq L.L.C. All rights reserved.</p>
         </div>
     </footer>
 </body>
